--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -15,6 +15,7 @@
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/Apprenant/projet/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/Apprenant/projet/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
+        test
     </ul>
 </div>
 {% endblock %}
