liste des formations+ details+form d'ajout/modif des Admins

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 
         {% endblock %}
     </head>
-    <body>
+    <body class="d-flex flex-column h-100">
 
         {% include "base/_header.html.twig" %}
 
