--- a/templates/base/_header.html.twig
+++ b/templates/base/_header.html.twig
@@ -1,12 +1,1 @@
-{% extends 'base.html.twig' %}
-
- {% block title %}  {% endblock %} 
-
-{% block body %}
-
-
-HEADER
-
-
-
-{% endblock %}
+Header 
