--- a/templates/formation/admin/form.html.twig
+++ b/templates/formation/admin/form.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %} 
-    {{ new? 'Nouvel formation/stage': stageFormation.titre}} 
+    {{ new? 'Nouvel formation/stage': formation.title}} 
 {% endblock %}
 {# page qui permet à l'admine d'ajouter ou modifier une formation/un stage #}
 {% block body %}
