--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -20,7 +20,7 @@
             </div>
 
             <select class="form-select" aria-label="Default select example">
-                <option selected>Choisissez une option<option value=""></option></option>
+                <option selected>Choisissez un thème<option value=""></option></option>
                 <option value="1">le projet</option>
                 <option value="2">le blog</option>
                 <option value="3">les stages et formations</option>
