--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,19 @@
 header{
-
+    background-color: green;
     text-align: center;
+    height: 150px;
+}
+
+
+body{
+background-color: rgb(161, 167, 150);
+
+}
+
+footer {
+    position: absolute; 
+    bottom: 0;
+    background-color: green;
+    height: 150px;
+    width: 100%;
 }
