--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -6,32 +6,25 @@
 
 {% block body %}
 
-        <div>
-            <a href="{{ path('blog') }}" class="small text-dark text-decoration-none">&#8592;Retour</a>
+        <div class="mb-4">
+            <a href="{{ path('blog') }}" class="small text-dark text-decoration-none">&#8592; Retour</a>
         </div>    
- 
-    <img src="image/potager1.jpg" alt="potager" class="w-100">
 
-    <div class="text-center">
-        <h1>Permaculture au potager : 115 kg de récoltes sur 50 m2 dans un jardin familial</h1>
-        <div class="lead">Publié le 28/01/2021 par Alice/L2A</div>
+         <img src="https://picsum.photos/id/{{ random(1,1000) }}/800/350" alt="" class="w-100">
+
+    <div class="mt-3">
+        <h1>Titre de l'article</h1>
+        <div class="lead">Publié le 01/04/2021 par l'équipe</div>
     </div>
 
     <div class="my-4">
-   Là pour l’instant, on en est à 115 kilos de légumes, sur 50 m2. Donc, sur de très petites surfaces, on peut arriver à avoir des productions assez importantes. 
-
-       
-   On est en zone 1, qui est la zone cultivée la plus proche de la maison, avec, tout d’abord un grand parterre d’aromatiques, avec ce dont on se sert le plus dans la cuisine.
-
-   Derrière moi il y a un parterre de fraises, une demande des enfants, et ils y vont très régulièrement. Et on a, derrière, un parterre d’artichauts et de rhubarbes. On est très consommateurs de rhubarbes dans la famille.
-
-    Je voulais aussi avoir la serre pas loin, qui pour l’instant est encore cultivée, mais qui à terme sera une serre à semis, parce que j’aime bien sortir de la maison et aller surveiller les semis, plutôt que d’avoir besoin de traverser tout le terrain. Comme tu parlais de terrasse, on a une exposition sud / sud-est sur le terrain, il fait très chaud l’été et donc est devenu indispensable la construction d’une pergola, avec plus tard, les kiwis qui monteront dessus pour faire de l’ombre.
-
-    <img src="" alt="" class="w-100">
-
-
-
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consectetur corporis cupiditate distinctio esse exercitationem hic id, incidunt ipsa ipsam iure nam nostrum omnis perspiciatis quaerat quibusdam quod reiciendis sapiente sed temporibus ut voluptatum? A aliquid eligendi facilis, iusto maiores nesciunt nulla quam reprehenderit voluptas? Aliquid eaque earum, error, facilis fuga fugit in labore, laboriosam nesciunt officiis omnis quam reiciendis tempora vero voluptas. Ad aliquam aperiam at atque beatae blanditiis consectetur corporis delectus dolores ea earum eius eveniet ex fugit hic illo incidunt inventore maxime minus molestias nesciunt nihil nisi nulla obcaecati placeat quam qui quidem quis quod ratione sapiente, similique sunt ullam? Accusantium blanditiis eligendi eos magni minima modi mollitia nostrum optio placeat qui quibusdam quis, quos repellat repudiandae, sequi veniam voluptatibus. Alias fuga fugit illum inventore ipsum magnam obcaecati odit quae, ratione voluptatem! Architecto aut blanditiis consequatur dignissimos eaque eos est inventore odio quidem voluptas! Dolorum, natus.
+        <hr>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consectetur corporis cupiditate distinctio esse exercitationem hic id, incidunt ipsa ipsam iure nam nostrum omnis perspiciatis quaerat quibusdam quod reiciendis sapiente sed temporibus ut voluptatum? A aliquid eligendi facilis, iusto maiores nesciunt nulla quam reprehenderit voluptas? Aliquid eaque earum, error, facilis fuga fugit in labore, laboriosam nesciunt officiis omnis quam reiciendis tempora vero voluptas. Ad aliquam aperiam at atque beatae blanditiis consectetur corporis delectus dolores ea earum eius eveniet ex fugit hic illo incidunt inventore maxime minus molestias nesciunt nihil nisi nulla obcaecati placeat quam qui quidem quis quod ratione sapiente, similique sunt ullam? Accusantium blanditiis eligendi eos magni minima modi mollitia nostrum optio placeat qui quibusdam quis, quos repellat repudiandae, sequi veniam voluptatibus. Alias fuga fugit illum inventore ipsum magnam obcaecati odit quae, ratione voluptatem! Architecto aut blanditiis consequatur dignissimos eaque eos est inventore odio quidem voluptas! Dolorum, natus.
+        <hr>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consectetur corporis cupiditate distinctio esse exercitationem hic id, incidunt ipsa ipsam iure nam nostrum omnis perspiciatis quaerat quibusdam quod reiciendis sapiente sed temporibus ut voluptatum? A aliquid eligendi facilis, iusto maiores nesciunt nulla quam reprehenderit voluptas? Aliquid eaque earum, error, facilis fuga fugit in labore, laboriosam nesciunt officiis omnis quam reiciendis tempora vero voluptas. Ad aliquam aperiam at atque beatae blanditiis consectetur corporis delectus dolores ea earum eius eveniet ex fugit hic illo incidunt inventore maxime minus molestias nesciunt nihil nisi nulla obcaecati placeat quam qui quidem quis quod ratione sapiente, similique sunt ullam? Accusantium blanditiis eligendi eos magni minima modi mollitia nostrum optio placeat qui quibusdam quis, quos repellat repudiandae, sequi veniam voluptatibus. Alias fuga fugit illum inventore ipsum magnam obcaecati odit quae, ratione voluptatem! Architecto aut blanditiis consequatur dignissimos eaque eos est inventore odio quidem voluptas! Dolorum, natus.
     </div>
 
-
+ 
+    
 {% endblock %}
