--- a/templates/formation/admin/form.html.twig
+++ b/templates/formation/admin/form.html.twig
@@ -13,7 +13,7 @@
     {% endif %}
      
 
-    <a href="{{path('list_stages_formations')}}"> <--Retour</a> <br> <br>
+    <a href="{{path('admin_list_formations')}}"> <--Retour</a> <br> <br>
 
     
     {{form(form)}}
