--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -25,8 +25,8 @@
                     ...
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-primary">Compris</button>
                 </div>
             </div>
         </div>
