commentaires et pagination

--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,5 +1,12 @@
-<footer  class="text-center">
+
+{# <footer class="text-center">
     <div class="container">
        &copy; Copyright 2021 by <a href="http://domain.invalid/">you</a>.
     </div>
-</footer>
+</footer> #}
+
+{# <footer class="footer mt-auto py-3 bg-light text-center" style="backgroun-">
+    <div class="container">
+        &copy; Copyright 2021 by <a href="http://domain.invalid/">you</a>.
+    </div>
+</footer> #}
