--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -34,40 +34,22 @@
                     <a href="{{ path('blog_article', {id: article.id}) }}">
                         <div class="img-ratio" style="--ratio: 60%;">
                             <div class="img">
-                                <img src="{{ asset(article.image) }}" class="card-img-top w-100" alt="...">
+                                <img src="{{ asset(article.imagePath) }}" class="card-img-top w-100" alt="...">
                             </div>
                         </div>
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">{{ article.title }}</h5>
-                        <p class="card-text">{{ article.content }}</p>
+                        <p class="card-text">{{ article.contentEllipsis }}</p>
                     </div>
                 </div>
             </div>
          {% endfor %}
     </div>
 
-<footer>
-    <nav aria-label="Page navigation example" class="mt-4">
-        <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-
-</footer>
-
+    <div class="navigation">
+        {{ knp_pagination_render(articles) }}
+    </div>
 
 
 {% endblock %}
