--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,20 +2,34 @@ header{
     background-color: green;
     text-align: center;
     height: 150px;
+    padding-top : 50px;
+   
 }
 
 
 body{
-background-color: rgb(161, 167, 150);
-
+    background-color: rgb(161, 167, 150);
+    /* -moz-box-sizing: border-box; 
+    box-sizing: border-box; */
+    /* height: 100%;
+	margin: 0; 
+    padding: 0; */
+    /* display : table;
+	width: 100%;
+} */
 }
 
-footer {
-     
-    bottom: 0;
+.footer {
+    position: absolute;
+    /* bottom: 0; */
     background-color: green;
-    height: 150px;
+    height: 60px;
     width: 100%;
+    /* padding-top:50px; */
+
+    /* display : table-row;
+	height: 100px;
+   */
 }
 
 .img-ratio {
@@ -41,3 +55,6 @@ footer {
     object-fit: cover;
 }
 
+/* h1{ 
+    margin-right: 50px;;
+} */
