--- a/templates/blog/membre/list.html.twig
+++ b/templates/blog/membre/list.html.twig
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="img-ratio" style="--ratio: 40%;">
                         <div class="img">
-                            <img src="{{ asset(article.image) }}" class="card-img-top w-100" alt="...">
+                            <img src="{{ asset(article.imagePath) }}" class="card-img-top w-100" alt="...">
                         </div>
                     </div>
                     <div class="card-body">
@@ -22,11 +22,16 @@
                         <p class="card-text">{{ article.content|slice(0,100) }}</p>
                     </div>
                     <div>
-                        <a href="{{ path('membre_blog_update', {id: article.id}) }}" class="btn btn-primary">Modifier l'article</a>
+                        <a href="{{ path('membre_blog_update', {id: article.id}) }}" class="btn btn-secondary mb-2">Modifier l'article</a>
                     </div>
                 </div>
             </div>
         {% endfor %}
-    </div>   
-  
+</div>   
+
+      {# <div class="navigation">
+        {{ knp_pagination_render(articles) }}
+    </div> #}
+
+
 {% endblock %}
