--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,5 +1,1 @@
-<footer class="footer mt-auto py-3 bg-light text-center">
-    <div class="container">
-       &copy; Copyright 2021 by <a href="http://domain.invalid/">you</a>.
-    </div>
-</footer>
+Footer
