--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -26,7 +26,7 @@
                     </a>       
                     <div class="card-body">
                         <h5 class="card-title">titre {{ formation.title }}</h5>
-                        <p class="card-text">{{ formation.contentellipsis() }}</p>
+                        <p class="card-text">{{ formation.contentEllipsis() }}</p>
                         <p>Nombre de place disponible: </p>
                         <a href="{{ path('formation', { id: formation.id}) }}">
                             <button type="button" class="btn btn-primary">voir detail</button>
