--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,9 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}ADMINISTRATEURS{% endblock %}
 
 {% block body %}
 
 <h1>Espace administrateur</h1>
+
+ <ul>
+    <li>
+        <a href="{{ path('membre_blog_list') }}">Gestion du blog</a>
+    </li>
+ </ul>
 
 {% endblock %}
