--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
 
-    Espace membre
+    <h1>Espace membre</h1>
+
+     <ul>
+        <li>
+            <a href="{{ path('membre_blog_list') }}">Gestion du blog</a>
+        </li>
+    </ul>
 
 {% endblock %}
