--- a/templates/blog/membre/list.html.twig
+++ b/templates/blog/membre/list.html.twig
@@ -4,9 +4,11 @@
 
 {% block body %}
 
- <div class="text-end">
-        <a href="{{ path('membre_blog_create') }}" class="btn btn-secondary mb-2">+ Nouvel article</a>
+{% if is_granted('ROLE_MEMBER') %}
+    <div class="text-end">
+            <a href="{{ path('membre_blog_create') }}" class="btn btn-secondary mb-2">+ Nouvel article</a>
     </div>
+{% endif %}
 
 <div class="row mt-5">
         {% for article in articles %}
