--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -10,7 +10,7 @@
 
         <div class="text-center">
             <h1>CONTACTEZ-NOUS!</h1>
-            <h2>Une réponse vous sera faite sous 48h, n'est ce pas Alexandre</h2>
+            <h2>Une réponse vous sera faite sous 48h, n'est ce pas Alexandre...</h2>
         </div>
 
         <form class="mt-4">
