--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,33 +14,37 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+        <div class="row">
+            <div class="col-lg-4 mx-auto">
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                <label for="inputEmail">Email</label>
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+                <label for="inputPassword">Password</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" required>
 
-    
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+        
         {# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html #}
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" name="_remember_me"> Remember me
+                    </label>
+                </div>
    
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+                <button class="btn btn-lg btn-primary" type="submit">
+                    Sign in
+                </button>
 
-    <div class='text-center mt-5'>
-        Pas encore de compte? <a href="{{path('app_register')}}"> Inscription</a>
-    </div>
+                <div class='text-center mt-5'>
+                    Pas encore de compte? <a href="{{ path('app_register') }}"> Inscription</a>
+                </div>
+            </div>
+        </div>    
+
 </form>
 {% endblock %}
