--- a/templates/base/_header.html.twig
+++ b/templates/base/_header.html.twig
@@ -1,3 +1,194 @@
-<Header>
-NAVBAR
-</Header>
+{# <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="description" />
+    <meta name="keywords" content="keywords" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Bienvenue</title>
+    <!-- styles-->
+    <link rel="stylesheet" href="css/styles.min.css" />
+    <script src="https://kit.fontawesome.com/69b2e80e9a.js" crossorigin="anonymous"></script>
+    <!-- Chargement des WebFonts-->
+    <script>
+        WebFontConfig = {
+
+            google: {
+
+                families: ['Nunito+Sans:300,400,500,700,900', 'Quicksand:300,400,500,700'],
+
+            }
+
+        }
+
+        function font() {
+
+            var wf = document.createElement('script')
+
+            wf.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js'
+            wf.type = 'text/javascript'
+            wf.async = 'true'
+
+            var s = document.getElementsByTagName('script')[0]
+
+            s.parentNode.insertBefore(wf, s)
+
+        }
+
+        font()
+    </script>
+</head>
+
+<body>
+    <div class="page-wrapper">
+        <!-- menu dropdown start-->
+        <div class="menu-dropdown">
+            <div class="menu-dropdown__inner" data-value="start">
+                <div class="screen screen--start">
+                    <div class="screen__item screen--trigger" data-category="pages"><span>#</span><span>
+                            <svg class="icon">
+                                <use xlink:href="#chevron"></use>
+                            </svg></span></div>
+                    <div class="screen__item"><a class="screen__link" href="blog.html">#</a></div>
+                    <div class="screen__item screen--trigger" data-category="shop"><span> #</span><span>
+                            <svg class="icon">
+                                <use xlink:href="#chevron"></use>
+                            </svg></span></div>
+                    <div class="screen__item"><a class="screen__link" href="contacts.html">#</a></div>
+                    <div class="screen__item screen--trigger" data-category="elements"><span>#</span><span>
+                            <svg class="icon">
+                                <use xlink:href="#chevron"></use>
+                            </svg></span></div>
+                    <div class="screen__item screen--trigger" data-category="language"><span>#</span><span>
+                            <svg class="icon">
+                                <use xlink:href="#chevron"></use>
+                            </svg></span></div>
+                    <ul class="screen__socials">
+                        <li><a class="item--facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        </li>
+                        <li><a class="item--twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a class="item--youtube" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                        </li>
+                        <li><a class="item--instagram" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        </li>
+                    </ul><a class="screen__button" href="#">#</a>
+                </div>
+            </div>
+            <div class="menu-dropdown__inner" data-value="home">
+                <div class="screen screen--sub">
+                    <div class="screen__heading">
+                        <h6 class="screen__back">
+                            <svg class="icon">
+                                <use xlink:href="#chevron-left"></use>
+                            </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-dropdown__inner" data-value="pages">
+                <div class="screen screen--sub">
+                    <div class="screen__heading">
+                        <h6 class="screen__back">
+                            <svg class="icon">
+                                <use xlink:href="#chevron-left"></use>
+                            </svg> <span>#</span>
+                        </h6>
+                    </div>
+                    <div class="screen__item"><a class="screen__link" href="404.html">#</a></div>
+                </div>
+            </div>
+            <div class="menu-dropdown__inner" data-value="shop">
+                <div class="screen screen--sub">
+                    <div class="screen__heading">
+                        <h6 class="screen__back">
+                            <svg class="icon">
+                                <use xlink:href="#chevron-left"></use>
+                            </svg> <span>#</span>
+                        </h6>
+                    </div>
+                    <div class="screen__item"><a class="screen__link" href="shop-catalog.html">#</a></div>
+                </div>
+            </div>
+            <div class="menu-dropdown__inner" data-value="elements">
+                <div class="screen screen--sub">
+                    <div class="screen__heading">
+                        <h6 class="screen__back">
+                            <svg class="icon">
+                                <use xlink:href="#chevron-left"></use>
+                            </svg>
+                        </h6>
+                    </div>
+
+                </div>
+            </div>
+            <div class="menu-dropdown__inner" data-value="language">
+                <div class="screen screen--sub">
+                    <div class="screen__heading">
+                        <h6 class="screen__back">
+                            <svg class="icon">
+                                <use xlink:href="#chevron-left"></use>
+                            </svg>
+                        </h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- menu dropdown end-->
+        <!-- header start-->
+        <header class="header header-common">
+            <div class="header__top">
+                <div class="row align-items-center">
+                    <div class="col-6 col-lg-4">
+                        <a class="logo" href="index.html"><img class="logo__img" src="img/preview.jpg"
+                                alt="logoBZH" /></a>
+                    </div>
+                    <div class="col-6 col-lg-8 d-flex justify-content-end">
+
+                        </li>
+                        <li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link"
+                                href="index.html"><span>Accueil</span></a>
+                            <!-- Sous menu start-->
+                            <ul class="main-menu__sub-list sub-list--style-2">
+                                <li><a href="404.html"><span>404 Page</span></a></li>
+                            </ul>
+                        </li>
+                        <li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link"
+                                href="blog.html"><span>Blog</span></a>
+                            <!-- Sous menu start-->
+                            <ul class="main-menu__sub-list sub-list--style-2">
+                                <li><a href="404.html"><span>404 Page</span></a></li>
+                            </ul>
+                        </li>
+                        <li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link"
+                                href="shop-product.html"><span>Stage et formation</span></a>
+                            <!-- Sous menu start-->
+                            <ul class="main-menu__sub-list sub-list--style-2">
+                                <li><a href="404.html"><span>404 Page</span></a></li>
+                            </ul>
+                        </li>
+                        <li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link"
+                                href="contact.html"><span>Contact</span></a>
+                            <!-- Sous menu start-->
+                            <ul class="main-menu__sub-list sub-list--style-2">
+                                <li><a href="404.html"><span>404 Page</span></a></li>
+                            </ul>
+                        </li>
+                        <li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link"
+                                href="javascript:void(0);"><span>Agenda</span></a>
+                            <!-- Sous menu start-->
+                            <ul class="main-menu__sub-list sub-list--style-2">
+                                <li><a href="404.html"><span>404 Page</span></a></li>
+                            </ul>
+                        </li>
+                        <a class="header__button " href="shop-account.html ">Connexion</a>
+                        <!-- menu-trigger start-->
+                        <div class="hamburger ">
+                            <div class="hamburger-box ">
+                                <div class="hamburger-inner "></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- header end-->s
+
+10 Ko #}
