Calendrier-JS et CSS pour login et enregistrement

--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -1,7 +1,21 @@
+
+{# Fichier "template" dans lequel injecter le contenu #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BaseController!{% endblock %}
+{# Titre de la page #}
+{% block title %}Titre{% endblock %}
 
+{# Bloc destiné à recevoir le CSS spécifique à la page #}
+{% block stylesheets %}
+
+{% endblock %}
+
+{# Bloc destiné à recevoir le contenu HTML de la page #}
 {% block body %}
+
+{% endblock %}
+
+{# Bloc destiné à recevoir le javascript spécifique à la page #}
+{% block javascripts %}
 
 {% endblock %}
