--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello StageFormationController!{% endblock %}
+{# Bloc destiné à recevoir le CSS spécifique à la page #}
+{% block stylesheets %}
+
+{% endblock %}
+
+{# Bloc destiné à recevoir le contenu HTML de la page #}
 
 {% block body %}
 <style>
@@ -47,4 +53,9 @@
     </div>
 
 </div>
+{% endblock %}
+
+{# Bloc destiné à recevoir le javascript spécifique à la page #}
+{% block javascripts %}
+
 {% endblock %}
