--- a/templates/blog/membre/list.html.twig
+++ b/templates/blog/membre/list.html.twig
@@ -14,12 +14,12 @@
         {% for article in articles %}
             <div class="col-md-6 col-lg-4 mb-3">
                 <div class="card">
-                    <div class="img-ratio" style="--ratio: 40%;">
+                    <div class="img-ratio" style="--ratio: 40%; width: 22rem; height: 15rem;">
                         <div class="img">
-                            <img src="{{ asset(article.imagePath) }}" class="card-img-top w-100" alt="...">
+                            <img src="{{ asset(article.imagePath) }}" class="card-img-top w-100" style="width: 22rem; height: 15rem;"alt="card image.">
                         </div>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="width: 22rem; height: 15rem;">
                         <h5 class="card-title">{{ article.title }}</h5>
                         <p class="card-text">{{ article.content|slice(0,100) }}</p>
                     </div>
