--- a/templates/blog/membre/form.html.twig
+++ b/templates/blog/membre/form.html.twig
@@ -52,7 +52,7 @@
 
     <div class="container">  
     {% if not new %}
-            <a href="{{ path('membre_blog_remove', {id: article.id}) }}" class="btn btn-danger">Supprimer l'article</a>
+            <a href="{{ path('membre_blog_remove', {id: article.id}) }}" class="btn btn-warning">Supprimer l'article</a>
             <br><br>
     {% endif %}
      <div class="container">
