--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,12 +5,12 @@
 {% block body %}
 
 
-<div class="row">
+<div class="row" style="padding-top: 200px;">
     <div class="col-lg-8 mx-auto">
 
         <div class="text-center">
-            <h1>CONTACTEZ-NOUS</h1>
-            <h2>Une réponse vous sera faite sous 48h.</h2>
+            <h4>CONTACTEZ-NOUS</h4>
+            <h5>Une réponse vous sera faite sous 48h.</h5>
         </div>
 
         <form class="mt-4" method="POST">
@@ -26,15 +26,15 @@
                 <option value="3">les stages et formations</option>
                 <option value="4">autres</option>
             </select>
-
+          
             <div class="mb-3">
                 <label for="message" class="form-label" >Message</label>
                 <textarea name="message" class="form-control" id="message" rows="10">
                 </textarea>
             </div>
 
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">Envoyer</button>
+            <div class="mb-3">
+                <button type="submit" class="btn btn-warning">Envoyer</button>
             </div>
   
         </form>
