--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -25,7 +25,8 @@
     </div>
 
     {% for comment in article.comments %}
-        <div class="my-3"><b>Publié le {{ comment.createdAt|date('d/m/Y') }} par {    { comment.Pseudo}}</b>
+        <div class="my-3"><b>Publié le {{ comment.createdAt|date('d/m/Y') }} par 
+        {{ comment.Pseudo }}</b>
             <div>{{ comment.message|nl2br }}</div>
         </div>
 
@@ -45,7 +46,7 @@
             </div>
 
             <div class="mt-3">
-                {{ form_row(form.submit) }}
+                {{ form_widget(form.submit, { 'attr': {'class': 'btn btn-warning'} }) }}
             </div>
 
             {{ form_end(form) }}
