--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,27 +9,26 @@ header{
 
 body{
     background-color: rgb(161, 167, 150);
-    /* -moz-box-sizing: border-box; 
-    box-sizing: border-box; */
-    /* height: 100%;
+    -moz-box-sizing: border-box; 
+    box-sizing: border-box; 
+    height: 100%;
 	margin: 0; 
-    padding: 0; */
-    /* display : table;
+    padding: 0; 
+    display : table;
 	width: 100%;
-} */
 }
 
 .footer {
     position: absolute;
-    /* bottom: 0; */
+    bottom: 0; 
     background-color: green;
     height: 60px;
     width: 100%;
-    /* padding-top:50px; */
+    padding-top:50px; 
 
     /* display : table-row;
-	height: 100px;
-   */
+	height: 100px; */
+
 }
 
 .form-group {
