--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,5 +1,5 @@
 <!-- Newsletter start-->
-<div class="main">
+<div class="main" id="footer">
     <div class="cta-block"><img class="img--bg" src="{{asset('/images/cta-bg_2.png')}}" alt="bg" />
         <div class="container">
             <div class="row align-items-center">
@@ -8,10 +8,23 @@
                     <p class="cta-block__text">Inscrivez-vous pour recevoir toutes nos dernières actu'</p>
                 </div>
                 <div class="col-lg-6 offset-30">
-                    <form class="form cta-form bottom-30" action="javascript:void(0);">
-                        <input class="form__field" type="email" placeholder="Votre E-mail" />
-                        <input class="form__submit" type="submit" value="Inscription" />
-                    </form>
+                
+                    {{form_start(form, {
+                        'attr': {
+                            'class':"form cta-form bottom-30",
+                            'id' : "newsLetterForm"
+                        },
+                        'action': path('newsletters')
+                    })}}
+
+                    {{form_widget(form)}}
+                        <button class="form__submit" type="submit">
+                        Inscription
+                        </button>
+                        
+   
+                    {{form_end(form)}}
+                    
                 </div>
             </div>
         </div>
