--- a/templates/base/home.html.twig
+++ b/templates/base/home.html.twig
@@ -126,7 +126,9 @@
         </div>
         <!-- promo pannel end-->
     </section>
-    <section class="section front-services"><img class="section__bg t0 l0" src="{{asset('/images/front-services__bg.jpg')}}" alt="bg" />
+    
+    <section class="section front-services">
+    <img class="section__bg t0 l0" src="{{asset('/images/about-terrarium_bg.png')}}" alt="bg" />
         <div class="container">
             <div class="row bottom-70">
                 <div class="col-md-5 bottom-30">
@@ -190,6 +192,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row top-50 d-flex d-md-none">
                 <div class="col-12 text-center">
                     <a class="button button--primary" href="#"></a>
@@ -199,7 +202,9 @@
     </section>
     <!-- front services end-->
     <!-- section start-->
-    <section class="section about-front no-padding-bottom" id="about"><img class="about-front__bg t50 r0" src="{{asset('/images/about_bg.png')}}" alt="img" />
+    
+    <section class="section about-front no-padding-bottom" id="about">
+    <img class="about-front__bg t50 r0" src="{{asset('/images/testimonials_bg.png')}}" alt="img" />
         <div class="container">
             <div class="row flex-column-reverse flex-lg-row">
                 <div class="col-lg-6 col-xl-5">
