--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>{% block title %}Projet écologique{% endblock %}</title>
 
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        <style>
+        .margin{
+            margin-top : 100px !important;
+        }
+        
+        </style>
+        {% endblock %}
 
         {# Bootstrap #}
         {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> #}
@@ -56,8 +63,10 @@
                 {'routeName' : route_name}
             ))}}
                    
-                    
+            <div class="margin">
             {% include "base/_flash.html.twig" %}
+            </div>      
+            
             {% block body %}{% endblock %}       
             
     
