--- a/templates/formation/admin/form.html.twig
+++ b/templates/formation/admin/form.html.twig
@@ -7,10 +7,24 @@
 {% block stylesheets %}
 {# Bootstrap #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <style>
+    
+
+    
+    .margin{
+        margin-top : 100px !important;
+    }
+    
+    
+    </style>
+ 
 
 {% endblock %}
-{# page qui permet à l'admine d'ajouter ou modifier une formation/un stage #}
+
 {% block body %}
+
+     
+<div class="container margin">
 
     {% if new %}
         <h1>Ajouter</h1>
@@ -24,6 +38,6 @@
     
     {{form(form)}}
 
-    
+</div>   
 
 {% endblock %}
