--- a/templates/formation/admin/list.html.twig
+++ b/templates/formation/admin/list.html.twig
@@ -7,14 +7,23 @@
 {% block stylesheets %}
 {# Bootstrap #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <style>
+  
+    .margin{
+        margin-top : 100px !important;
+    }
+    
+    </style>
+ 
 
 {% endblock %}
 
 {% block body %}
-    {% set i = 0 %}
 
-    <h1>Les formations</h1> 
      
+<div class="container margin">
+{% set i = 0 %}
+    <h1>Les formations</h1> 
 
         <table class="table table-striped table-hover">
             <thead>
@@ -54,7 +63,7 @@
              
         </div>
         
-    
+</div>    
         
 
    
