--- a/templates/security/connexion.html.twig
+++ b/templates/security/connexion.html.twig
@@ -73,7 +73,7 @@
                                 <div class="col-12">
 
                                     <button class="form__button form__submit" type="submit">
-                                        Connection
+                                        Connexion
                                     </button>
                                     
                                 </div>
@@ -83,7 +83,7 @@
 
                 </div>
 
-                <img src="{{asset('/images/choice.jpg')}}" alt="choice">
+                <img src="{{asset('/images/preview2.png')}}" alt="choice">
 
                 <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-0 col-xl-4 margin-bottom">
                     {% for flashError in app.flashes('verify_email_error') %}
